--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 AWS_KEY_ID="..."
 AWS_SECRET_ACCESS_KEY=".../...+"
 
+AWS_S3_BUCKET_NAME="...-bucket-0"
+
 DATABASE_URL="postgresql://neondb_owner:...@...-pooler.us-east-2.aws.neon.tech/neondb?sslmode=require"
